--- a/index.html
+++ b/index.html
@@ -274,6 +274,11 @@ style=" fill:#000000;"><path fill="#03A9F4" d="M42,12.429c-1.323,0.586-2.746,0.9
       </aside>
     </section>
 
+    <!-- FOOTER -->
+    <footer>
+      <span>&copy; Techsnap 2022</span>
+    </footer>
+
     
 
     <script src="script.js"></script>
