adding about page

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <nav class="flex container main-menu">
       <div class="logo"><img src="../assets/logo.png" alt="logo"></div>
       <ul class="flex nav-menu">
-        <li>Catalog</li>
+        <li><a href="about.html">About</a></li>
         <li>Community</li>
         <li>Career Path</li>
         <li>Resources</li>
@@ -35,7 +35,7 @@
       <nav class="show-menu">
       <div class="mobile-menu container">
         <ul class="flex flex-column">
-          <li>Catalog</li>
+          <li><a href="about.html">About</a></li>
           <li>Community</li>
           <li>Career Path</li>
           <li>Resources</li>
