--- a/about.html
+++ b/about.html
@@ -17,7 +17,7 @@
   <body>
     <!-- NAVBAR -->
     <nav class="flex container main-menu">
-      <div class="logo"><img src="./assets/logo.png" alt="logo" /></div>
+      <div class="logo"><a href="index.html"><img src="./assets/logo.png" alt="logo" /></a></div>
       <ul class="flex nav-menu">
         <li>Catalog</li>
         <li>Community</li>
