--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
 
     <!-- MOBILE NAV -->
     <nav class="flex container mobile-nav">
-      <div class="logo"><img src="../assets/logo.png" alt="logo"></div>
+      <div class="logo"><a href="index.html"><img src="./assets/logo.png" alt="logo" /></a></div>
       <div class="toggle">
         <i class="fas fa-bars"></i>
       </div>
