--- a/about.html
+++ b/about.html
@@ -241,33 +241,137 @@
           </p>
 
           <div class="skills-chart">
-            <div class="skills-chart-labels">
-              <span class="label-1">JOB FAMILY</span>
-              <span>JOB ROLE</span>
+            <div class="skills-job-family">
+              <span class="label-1 skill-content-label">JOB FAMILY</span>
+              <h2
+                id="software-eng"
+                class="skill-content skill-content-job active"
+              >
+                Software Engineering
+              </h2>
+              <h2 id="web-dev" class="skill-content skill-content-job">
+                Web Development
+              </h2>
+              <h2 id="qa" class="skill-content skill-content-job">
+                QA and Testing
+              </h2>
+              <h2 id="cloud-devops" class="skill-content skill-content-job">
+                Cloud and DevOps
+              </h2>
+              <h2 id="data-science" class="skill-content skill-content-job">
+                Data Science and ML
+              </h2>
+              <h2 id="cybersecurity" class="skill-content skill-content-job">
+                Cybersecurity
+              </h2>
             </div>
 
-            <div class="skills_chart-roles">
-              <ul>
-                <li class="skills_chart-roles-family active">
-                  <a href="#software-engineering"> Software Engineering </a>
-                  <span class="skills_chart-roles-family_content">
-                    <ul>
-                      <li class="skillschart-roles-role">
-                        <a href="#software-engineer">Software Engineer </a>
-                      </li>
-                      <li class="skills_chart-roles-role">
-                        <a href="#software-engineer-intern">
-                          Software Engineer Intern
-                        </a>
-                      </li>
-                    </ul>
-                    <span class="skills_chart-roles-note"
-                      >Can’t find the role you’re looking for?<br />Try a
-                      different Job family</span
-                    >
-                  </span>
+            <div class="skills-job-role">
+              <span class="skill-content-label">JOB ROLE</span>
+              <ul class="software-eng active">
+                <li class="skill-content">Software Engineer</li>
+                <li class="skill-content">Software Engineer Intern</li>
+                <li class="skill-note">
+                  Can’t find the role you’re looking for? Try a different Job
+                  family
                 </li>
               </ul>
+              <ul class="web-dev">
+                <li class="skill-content">Back-End Developer</li>
+                <li class="skill-content">Front-End Developer</li>
+                <li class="skill-content">Full-Stack Developer</li>
+                <li class="skill-note">
+                  Can’t find the role you’re looking for? Try a different Job
+                  family
+                </li>
+              </ul>
+              <ul class="qa">
+                <li class="skill-content">QA Engineer</li>
+                <li class="skill-note">
+                  Can’t find the role you’re looking for? Try a different Job
+                  family
+                </li>
+              </ul>
+              <ul class="cloud-devops">
+                <li class="skill-content">Cloud Engineer</li>
+                <li class="skill-content">Site Reliability Engineer</li>
+                <li class="skill-note">
+                  Can’t find the role you’re looking for? Try a different Job
+                  family
+                </li>
+              </ul>
+              <ul class="data-science">
+                <li class="skill-content">Data Engineer(Java Spark)</li>
+                <li class="skill-content">Data Engineer(PySpark)</li>
+                <li class="skill-content">Data Engineer(Scala Spark)</li>
+                <li class="skill-content">Data Scientist</li>
+                <li class="skill-content">Machine Learning Engineer</li>
+                <li class="skill-note">
+                  Can’t find the role you’re looking for? Try a different Job
+                  family
+                </li>
+              </ul>
+              <ul class="cybersecurity">
+                <li class="skill-content">Cloud Security Engineer</li>
+                <li class="skill-content">Cybersecurity Engineer</li>
+                <li class="skill-note">
+                  Can’t find the role you’re looking for? Try a different Job
+                  family
+                </li>
+              </ul>
+            </div>
+
+            <div class="skills-tags">
+              <span class="tag">Code Quality</span>
+              <span class="tag">Language Proficiency</span>
+              <span class="tag">Problem Solving</span>
+              <span class="tag">REST API</span>
+              <span class="tag">SQL</span>
+              <span class="tag">Technical Communications</span>
+              <span class="tag">Code Quality</span>
+              <span class="tag">Angular</span>
+              <span class="tag">CSS</span>
+              <span class="tag">JavaScript</span>
+              <span class="tag">Node.js</span>
+              <span class="tag">Problem Solving</span>
+              <span class="tag">REST API</span>
+              <span class="tag">SQL</span>
+              <span class="tag">Technical Communications</span>
+              <span class="tag">System Design</span>
+              <span class="tag">Java</span>
+              <span class="tag">Jenkins</span>
+              <span class="tag">Selenium</span>
+              <span class="tag">Technical Communications</span>
+              <span class="tag">Apache Spark</span>
+              <span class="tag">Applied Math</span>
+              <span class="tag">Couchbase</span>
+              <span class="tag">Code Quality</span>
+              <span class="tag">Data Visualization</span>
+              <span class="tag">Data Modeling</span>
+              <span class="tag">Data Wrangling</span>
+              <span class="tag">Hadoop</span>
+              <span class="tag">Java</span>
+              <span class="tag">Kafka</span>
+              <span class="tag">Machine Learning</span>
+              <span class="tag">Python</span>
+              <span class="tag">PyTorch</span>
+              <span class="tag">R</span>
+              <span class="tag">Scala</span>
+              <span class="tag">SQL</span>
+              <span class="tag">Statistics</span>
+              <span class="tag">System Design</span>
+              <span class="tag">Technical Communications</span>
+              <span class="tag">TensorFlow</span>
+              <span class="tag">Ansible</span>
+              <span class="tag">AWS</span>
+              <span class="tag">Code Quality</span>
+              <span class="tag">Docker</span>
+              <span class="tag">Jenkins</span>
+              <span class="tag">Kubernetes</span>
+              <span class="tag">Linux</span>
+              <span class="tag">System Design</span>
+              <span class="tag">Technical Communications</span>
+              <span class="tag">Terraform</span>
             </div>
           </div>
         </div>
