--- a/about.html
+++ b/about.html
@@ -19,7 +19,7 @@
 		<link rel="stylesheet" href="https://unpkg.com/aos@next/dist/aos.css" />
 		<link rel="stylesheet" href="main/navbarfooter.css">
 
-    
+
 		<title>Techsnap</title>
 
         
@@ -31,7 +31,9 @@
     <div class="mainBody">
       <div class="nav-bar-desktop">
             <div class="desk-nav-frame">
+              <div class="logo">
                 <img src="main/logo.png" alt="TechSnap Logo" srcset="" height="60px">
+              </div>
                 <div class="desk-dropdowns">
                     <li class="1-dropdown">
                         <p class="catalog-desk">Catalog ⌵</p>
