--- a/index.html
+++ b/index.html
@@ -22,7 +22,9 @@
     <div class="mainBody">
       <div class="nav-bar-desktop">
             <div class="desk-nav-frame">
-                <img src="main/logo.png" alt="TechSnap Logo" srcset="" height="60px">
+                <div class="logo">
+                    <img src="main/logo.png" alt="TechSnap Logo" srcset="" height="60px">
+                  </div>
                 <div class="desk-dropdowns">
                     <li class="1-dropdown">
                         <p class="catalog-desk">Catalog ⌵</p>
